--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   just_audio: ^0.9.31
   provider: ^6.0.5
   webviewx: ^0.2.1
+  gif_view: ^0.3.1
+  context_menus: ^1.0.2
 
 dev_dependencies:
   flutter_test:
